solc_ossfuzz_seed_corpus/test_sol/test_903a981708d3cfb2b1ee3e06e6ef9b8828d4457db9f17055ba582baef6c9ecc3_915ad12813683a6ad6d34b8491fa3d3ccc8fdbb6_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  function (int136) internal   returns (int224, bytes14, bool) el0;
  int128 el1;
  address payable[2] el2;
}
library L0 {
  function f0(function (uint48, address payable[] memory, address payable) external   returns (bool, bool) i0,int128 i1) public    returns(int120 o0)
  {
  }
  error er0(uint88 ep0);
  function f1() public    returns(function (St0 memory, int232[] memory, bool) external  [] memory o0)
  {
  }
  function f2() external    returns(uint200 o0,address o1)
  {
    return ((uint200(((uint200(1606938044258990275541962092341162602522202993782792835301375) % ((uint200(0) - uint200(761196871866895983910013677035431820427663966748887766876899)) >> uint224(uint224(0)))) / uint200(776549553545330356190902112455451435801421199340482091744359))) * uint200(1606938044258990275541962092341162602522202993782792835301375)), address(0x0000000000000000000000000000000000000003));
  }
  bool public constant cons0 = true;
  function f3() external    returns(bytes memory o0,uint104 o1,int224 o2)
  {
  }
  function f4(function (St0 memory, int152[] memory, bytes29) internal   i0,uint208 i1) external    returns(int176 o0)
  {
  }
}
pragma solidity >= 0.0.0;
using L0 for uint;
using L0 for uint;
using L0 for uint;
// ----
// TypeError 2582: (su0.sol:363-373): Internal type cannot be used for external function type.
